migration-result/docs/ver/13.x/access-controls/device-trust/enforcing-device-trust.mdx
---
title: Enforce Device Trust (Preview)
description: Learn how to enforce trusted devices with Teleport
videoBanner: gBQyj_X1LVw
version: "13.x"
---

<Warning>
  <p>
    **Preview Note: Supported Resources**
  </p>

  The device trust preview only supports SSH, Database and Kubernetes resources.
  Support for other resources is planned for upcoming Teleport versions.
</Warning>

Resources protected by the device mode "required" will enforce the use of a
trusted device, in addition to establishing the user's identity and enforcing
the necessary roles. Furthermore, users using a trusted device leave audit
trails that include the device's information.

Device Trust enforcement can be configured with the following three modes of operation, represented
by the `device_trust_mode` authentication setting:

- `off` - disables device trust. Device authentication is not performed and
  device-aware audit logs are absent.
- `optional` - enables device authentication and device-aware audit, but does
  not require a trusted device to access resources.
- `required` - enables device authentication and device-aware audit.
  Additionally, it requires a trusted device for all SSH, Database and
  Kubernetes connections.

### Prerequisites

<Tabs>
  <Tab title="Self-Hosted Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see the Enterprise [Getting
      Started](/docs/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.4.16.
      You can download these tools by visiting your [Teleport account](https://teleport.sh).
      You can verify the tools you have installed by running the following commands:

      ```bash
      $ tctl version
      # Teleport Enterprise v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The `tctl` admin tool and `tsh` client tool version >= 14.3.6.
      To download these tools, visit the [Downloads](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```bash
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>
</Tabs>

- To enroll a macOS device, you need:
  - A signed and notarized `tsh` binary for enrollment.
    [Download the macOS tsh installer](/docs/ver/13.x/installation#macos).
  - A Teleport version newer than v12.0.0.
- To enroll a Windows device, you need:
  - A device that includes a TPM with 2.0 support.
  - `tsh` installed on the device. [Download the Windows tsh installer](/docs/ver/13.x/installation#windows-tsh-client-only).
  - Credentials for a user with administrator privileges for the device. This is only required during enrollment.
  - A Teleport version newer than v13.1.2.

## Role-based trusted device enforcement

Role-based configuration enforces trusted device access at the role level. It
can be configured with the `spec.options.device_trust_mode` option and
applies to the resources in its `allow` rules. It
works similarly to [`require_session_mfa`](/docs/ver/13.x/access-controls/guides/per-session-mfa).

<Tip>
  <p>
    **v13.3.6+**
  </p>

  Teleport version 13.3.6 and above has the preset `require-trusted-device` role.
  Make sure you update the "allow" rules in the role according to your requirements.
</Tip>

To enforce authenticated device checks for a specific role, update the role with
the following:

```diff
kind: role
version: v6
metadata:
  name: require-trusted-device
spec:
  options:
    # require authenticated device check for this role
+   device_trust_mode: "required" # add this line
  allow:
    logins: ['admin']
    kubernetes_groups: ['edit']
    node_labels:
      '*': '*'
    ...

```

```bash
$ tctl create -f device-enforcement.yaml
```

## Cluster-wide trusted device enforcement

Cluster-wide configuration enforces trusted device access at the cluster level.
Enterprise clusters run in `optional` mode by default. Changing the mode to
`required` will enforce a trusted device for all SSH, Database and Kubernetes
accesses.

<Warning>
  <p>
    **Web UI**
  </p>

  The Web UI is not capable of trusted device access during the device trust
  preview. Only `tsh` and Teleport Connect are able to fulfill device mode
  `required`.
</Warning>

To enable device mode `required` update your configuration as follows:

<Tabs dropDownCaption="Teleport Deployment">
  <Tab title="Dynamic Resources">
    Create a `cap.yaml` file or get the existing configuration using
    `tctl get cluster_auth_preference`:

    ```diff
    kind: cluster_auth_preference
    version: v2
    metadata:
      name: cluster-auth-preference
    spec:
      type: local
      second_factor: "on"
      webauthn:
        rp_id: teleport.example.com
      device_trust:
    +   mode: "required" # add this line
    ```

    Update the configuration:

    ```bash
    $ tctl create -f cap.yaml
    cluster auth preference has been updated
    ```

    You can also edit this configuration directly:

    ```bash
    $ tctl edit cluster_auth_preference
    ```
  </Tab>

  <Tab title="Static Config">
    Edit the Auth Server's `teleport.yaml` file and restart all Auth Services:

    ```diff
    auth_service:
      authentication:
        type: local
        second_factor: "on"
        webauthn:
          rp_id: teleport.example.com
        device_trust:
    +     mode: "required" # add this line
    ```
  </Tab>
</Tabs>

Once the config is updated, SSH, Database and Kubernetes access without a trusted device will be forbidden.
For example, SSH access without a trusted device fails with the following error:

```bash
$ tsh ssh ip-172-31-35-170
ERROR: ssh: rejected: administratively prohibited (unauthorized device)
```

<Tip>
  <p>
    **Trusted Clusters**
  </p>

  It is possible to use [trusted
  clusters](/docs/ver/13.x/management/admin/trustedclusters) to limit the impact of
  device mode `required`. A leaf cluster in mode `required` will enforce access to
  all of its resources, without imposing the same restrictions to the root
  cluster. Likewise, a root cluster will not enforce device trust on resources in
  leaf clusters.
</Tip>

## Locking a device

Similar to [session and identity locking](/docs/ver/13.x/access-controls/guides/locking), a device can
be locked using `tctl lock`.

Locking blocks certificate issuance and ongoing or future accesses originating
from a locked device. Locking a device only works if device trust is enabled and
if the device is enrolled to Teleport.

Find a device ID to lock:

```bash
$ tctl devices ls
Asset Tag     OS    Enroll Status   Device ID
------------ -----  ------------- ------------------------------------
C00AA0AAAA0A  macOS  enrolled     9cdfc0ad-64b7-4d9c-this-is-an-example
```

Lock a device:

```bash
$ tctl lock --device=9cdfc0ad-64b7-4d9c-this-is-an-example --ttl=12h
Created a lock with name "5444970a-39a0-4814-968d-e58b4a8fa686".
```

Now, if a user on that device tries to access an SSH server for example,
Teleport will deny access:

```bash
$ tsh ssh ip-172-31-35-170
ERROR: ssh: rejected: administratively prohibited (lock targeting Device:"9cdfc0ad-64b7-4d9c-this-is-an-example" is in force)
```

## Troubleshooting

### "binary missing signature or entitlements" on `tsh device enroll`

A signed and notarized `tsh` binary is necessary to enroll and use a a trusted
device. [Download the macOS tsh installer](/docs/ver/13.x/installation#macos) to fix
the problem.

### "unauthorized device" errors using a trusted device

A trusted device needs to be registered and enrolled before it is recognized by
Teleport as such. Follow the [registration](/docs/ver/13.x/access-controls/device-trust/device-management#register-a-trusted-device) and
[enrollment](/docs/ver/13.x/access-controls/device-trust/device-management#enroll-a-trusted-device) steps
and make sure to `tsh logout` and `tsh login` after enrollment is done.

## Next steps

- [Device Management](/docs/ver/13.x/access-controls/device-trust/device-management)
- [Jamf Pro Integration](/docs/ver/13.x/access-controls/device-trust/jamf-integration)
